--- a/index.html
+++ b/index.html
@@ -27,26 +27,26 @@
     <!-- Navigation Bar -->
     <nav class="bg-white fixed left-0 right-0 top-0 py-6 shadow-lg">
       <div class="container mx-auto flex justify-between items-center px-4">
-        <div class="text-2xl font-bold">Tanav.dev</div>
+        <div class="text-xl sm:text-2xl font-bold">Tanav.dev</div>
         <ul class="flex space-x-4 text-gray-600">
-          <li><a href="#" class="hover:text-black">Home</a></li>
-          <li><a href="#about" class="hover:text-black">About</a></li>
-          <li><a href="#projects" class="hover:text-black">Projects</a></li>
-          <li><a href="#contact" class="hover:text-black">Contact</a></li>
+          <li><a href="#" class="hover:text-black hidden sm:block">Home</a></li>
+          <li><a href="#about" class="hover:text-black hidden sm:block">About</a></li>
+          <li><a href="#projects" class="hover:text-black hidden sm:block">Projects</a></li>
+          <li><a href="#contact" class="hover:text-black hidden sm:block">Contact</a></li>
         </ul>
       </div>
     </nav>
 
     <!-- Hero Section -->
-    <header class="py-24 flex text-black mt-32 items-center justify-center  w-full">
+    <header class="py-24 mt-12 mx-3 flex flex-col-reverse md:flex-row text-black md:mt-32 items-center justify-center">
       <div class="flex flex-col">
-        <h1 class="text-5xl font-bold mb-4">Full-Stack MERN <br> Developer <img class="inline h-16 w-16 ml-2" src="assets/hi.png"></h1>
-        <p class="text-lg">
+        <h1 class="text-2xl sm:text-5xl font-bold mb-4">Full-Stack MERN <br> Developer <img class="inline h-8 w-8 sm:h-16 sm:w-16 ml-1 sm:ml-2" src="assets/hi.png"></h1>
+        <p class="text-md sm:text-lg">
           Hi! I am Tanav Poswal. A passionate Full Stack <br> Developer based in Bhilwara, Rajasthan.
         </p>
         <div class="mt-3">
-            <p class="text-lg font-bold text-indigo-600">TECH STACK</p>
-            <div class="flex text-3xl gap-2 text-gray-500">    
+            <p class="text-sm sm:text-lg font-bold text-indigo-600">TECH STACK</p>
+            <div class="flex text-lg sm:text-3xl gap-2 text-gray-500">    
                 <i class="devicon-html5-plain"></i>
                 <i class="devicon-css3-plain"></i>
                 <i class="devicon-javascript-plain"></i>
@@ -60,19 +60,18 @@
             </div>
         </div>
       </div>
-
-      <div class="ml-16">
-        <img class="rounded-full border shadow-lg w-56" src="assets/square.jpg" alt="">
+      <div class="mb-10 md:ml-16 md:mb-0">
+        <img class="rounded-full border shadow-2xl w-56" src="https://media.licdn.com/dms/image/D5603AQGAAqKKVIgjcg/profile-displayphoto-shrink_200_200/0/1703482763904?e=1712188800&v=beta&t=CXrL7pFQ4ah7X3CmF_FTW23AarxL9_D4aAm1sooD5rQ" alt="">
       </div>
     </header>
 
     <!-- About Section -->
-    <section id="about" class="py-24 pt-32">
-      <div class="container mx-auto">
-        <h2 class="text-5xl font-bold mb-8 text-center">About Me</h2>
+    <section id="about" class="py-24 sm:pt-32">
+      <div class="sm:container mx-auto">
+        <h2 class="text-2xl sm:text-5xl font-bold mb-8 text-center">About Me</h2>
         <div class="flex justify-center items-center">
-          <div class="max-w-xl">
-            <p class="text-lg">
+          <div class="max-w-lg sm:max-w-xl">
+            <p class="text-sm text-center sm:text-left sm:text-lg">
                 🚀 Tanav | Passionate about AI, Web3, and Full-Stack Web Development 🌐👋 Hi, I'm Tanav, an aspiring tech enthusiast with a zeal for the future of AI and Web3. Currently exploring the realms of full-stack web development with a focus on the MERN stack.💡 AI Enthusiast: Eager to delve into the world of artificial intelligence, I'm immersing myself in machine learning, neural networks, and natural language processing to understand the foundations of AI.🌐 Web3 Explorer: Excited about the potential of Web3, I'm on a quest to comprehend its decentralized nature, blockchain applications, and the evolution of the internet.🛠️ MERN Stack Learner: Engaged in mastering the MERN stack (MongoDB, Express.js, React, Node.js), I'm honing my skills to create innovative and responsive web applications.🔍 Seeking opportunities to learn, grow, and contribute to the ever-evolving tech landscape. Let's connect and explore the future together!
             </p>
           </div>
@@ -81,39 +80,39 @@
     </section>
 
     <!-- Projects Section -->
-    <section id="projects" class="bg-gray-100 py-24 pt-32">
+    <section id="projects" class="bg-gray-100 py-24 px-6 sm:px-0 sm:pt-32">
       <div class="container mx-auto">
-        <h2 class="text-5xl font-bold mb-8 text-center">Projects</h2>
+        <h2 class="text-2xl sm:text-5xl font-bold mb-8 text-center">Projects</h2>
         <!-- Add your projects here -->
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
           <div class="bg-white shadow-md p-6 rounded-lg max-w-md">
-            <h3 class="text-xl font-bold mb-2">Expense Tracker App</h3>
-            <p>This app allows users to track their income and expenses and save them to their user ID.</p>
+            <h3 class="text-md sm:text-xl font-bold mb-2">Expense Tracker App</h3>
+            <p class="text-gray-600">This app allows users to track their income and expenses and save them to their user ID.</p>
             <a target="_blank" href="https://github.com/tanavposwal/expenses-tracker" class="text-blue-700 hover:text-blue-800 hover:underline mt-1">github</a>
           </div>
           <div class="bg-white shadow-md p-6 rounded-lg max-w-md">
-            <h3 class="text-xl font-bold mb-2">Url Shortener</h3>
-            <p>This app allows users to make short url and monitize them.</p>
-            <a target="_blank" href="https://github.com/tanavposwal/expenses-tracker" class="text-blue-700 hover:text-blue-800 hover:underline mt-1">github</a>
+            <h3 class="text-md sm:text-xl font-bold mb-2">Url Shortener</h3>
+            <p class="text-gray-600">This app allows users to make short url and monitize them.</p>
+            <a target="_blank" href="https://github.com/tanavposwal/url-shortener" class="text-blue-700 hover:text-blue-800 hover:underline mt-1">github</a>
           </div>
           <div class="bg-white shadow-md p-6 rounded-lg max-w-md">
-            <h3 class="text-xl font-bold mb-2">Notrz</h3>
-            <p>React only todo app.</p>
+            <h3 class="text-md sm:text-xl font-bold mb-2">Notrz</h3>
+            <p class="text-gray-600">React only todo app.</p>
             <a target="_blank" href="https://github.com/tanavposwal/notrz" class="text-blue-700 hover:text-blue-800 hover:underline mt-1">github</a>
           </div>
           <!-- Add more projects as needed -->
         </div>
       </div>
-      <h3 class="text-center text-xl mt-8 font-bold italic text-indigo-600">more projects coming on my github</h3>
+      <h3 class="text-center text-sm sm:text-xl mt-8 font-bold italic text-indigo-600">more projects coming on my github</h3>
     </section>
 
     <!-- Contact Section -->
     <section id="contact" class="py-24 pt-32">
       <div class="container mx-auto">
-        <h2 class="text-5xl font-bold mb-8 text-center">Contact Me</h2>
+        <h2 class="text-2xl sm:text-5xl font-bold mb-8 text-center">Contact Me</h2>
         <div class="flex justify-center items-center">
           <div class="max-w-md">
-            <p class="text-sm text-gray-600">
+            <p class="text-xs sm:text-sm text-gray-600">
               Feel free to reach out to me via email or social media.
             </p>
             <ul class="mt-4 text-center gap-2">
