--- a/index.html
+++ b/index.html
@@ -3,7 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Full Stack Developer Portfolio</title>
+    
+    <meta name="description" content="Tanav Poswal is a full stack MERN developer. This is there portfolio.">
+    <meta name="keywords" content="Tanav, Poswal, Tanav Poswal, MERN, fullstack, CGC">
+    <meta name="author" content="Tanav Poswal
+    ">
+
+    <!-- Title Tag -->
+    <title>Tanav - portfolio</title>
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://tanav.vercel.app">
+
+    <!-- Open Graph Meta Tags (for social sharing) -->
+    <meta property="og:title" content="Tanav Poswal">
+    <meta property="og:description" content="Tanav - full stack MERN developer.">
+    <meta property="og:image" content="https://media.licdn.com/dms/image/D5603AQGAAqKKVIgjcg/profile-displayphoto-shrink_200_200/0/1703482763904?e=1712188800&v=beta&t=CXrL7pFQ4ah7X3CmF_FTW23AarxL9_D4aAm1sooD5rQ">
+    <meta property="og:url" content="https://tanavposwal.vercel.app">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Meta Tags (for Twitter Cards) -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Tanav Poswal">
+    <meta name="twitter:description" content="Tanav - full stack MERN developer.">
+    <meta name="twitter:image" content="https://media.licdn.com/dms/image/D5603AQGAAqKKVIgjcg/profile-displayphoto-shrink_200_200/0/1703482763904?e=1712188800&v=beta&t=CXrL7pFQ4ah7X3CmF_FTW23AarxL9_D4aAm1sooD5rQ">
+    
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+
     <!-- Include Tailwind CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
