--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+    <meta name="google-site-verification" content="z59xSylH66E6d4GliPPBLS9zXEc4Zp4Uq8Di2gUodlE" />
+
     <meta name="description" content="Tanav Poswal is a full stack MERN developer. This is there portfolio.">
     <meta name="keywords" content="Tanav, Poswal, Tanav Poswal, MERN, fullstack, CGC">
     <meta name="author" content="Tanav Poswal
